attempt to fix font on safari

--- a/app/styles.module.css
+++ b/app/styles.module.css
@@ -51,7 +51,9 @@
     z-index: -20;
     -webkit-transform: skew(335deg, 350deg);
     transform: skew(345deg, 345deg);
-    font-family: 'Permanent Marker', cursive;
+    font-family: 'Permanent Marker', sans-serif;
+    font-weight: 400; 
+    font-style: 'normal';
     background-image: -webkit-linear-gradient(0.25turn, #00feff 0%, #ff00aa 100%);
     -webkit-background-clip: text;
     background-clip: text;
